[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/items/potion2.png" type="Texture" id=1]
[ext_resource path="res://World/Battle/PreBattle/SingleItemSelect.gd" type="Script" id=2]

[node name="SingleItemView" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="Panel"]
margin_left = 136.0
margin_top = 72.0
margin_right = 384.0
margin_bottom = 320.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="Description" type="Label" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -568.0
margin_bottom = -144.0
text = "A basic health potion. Restores 5 HP when used. "

[node name="Stacks" type="Label" parent="Panel"]
margin_left = 448.0
margin_top = 648.0
margin_right = 624.0
margin_bottom = 704.0

[node name="item_name" type="MarginContainer" parent="Panel"]
margin_left = 192.0
margin_top = 320.0
margin_right = 320.0
margin_bottom = 384.0

[node name="FieldValue" type="Label" parent="Panel/item_name"]
margin_top = 25.0
margin_right = 128.0
margin_bottom = 39.0

[node name="Right" type="Button" parent="."]
margin_left = 888.0
margin_top = 640.0
margin_right = 1024.0
margin_bottom = 704.0
text = "Right"

[node name="Left" type="Button" parent="."]
margin_left = 64.0
margin_top = 640.0
margin_right = 192.0
margin_bottom = 704.0
text = "Left"

[node name="Add" type="Button" parent="."]
margin_left = 648.0
margin_top = 640.0
margin_right = 768.0
margin_bottom = 704.0
text = "Add"

[node name="Remove" type="Button" parent="."]
margin_left = 320.0
margin_top = 640.0
margin_right = 424.0
margin_bottom = 704.0
text = "Remove"

[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="Remove" to="." method="_on_Remove_pressed"]
